--- a/sirem02/index.html
+++ b/sirem02/index.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" type="text/css" media="screen" href="../includes/jqGrid/plugins/ui.multiselect.css" >
         <script src="../includes/jqGrid/js/i18n/grid.locale-es.js" type="text/javascript"></script>
         <script src="../includes/jqGrid/js/jquery.jqGrid.min.js" type="text/javascript"></script>
+        <script src="http://malsup.github.io/jquery.blockUI.js"></script>
 
         <script src="../includes/jquery.fileDownload.js" type="text/javascript"></script>
 
