Reserva Salas - Cuartas

--- a/sirem02/vista/html/configuracion.html
+++ b/sirem02/vista/html/configuracion.html
@@ -11,18 +11,28 @@
     </head>
     <body>
         <div class="box">
-            
-            <h1>
-            Permite cargar la programación de salas para el rango de fechas dado.
-            </h1>
-            
+            Implemente aquí:
+            <br>
+            Ingreso de fecha inicial y final de una fase de trabajo (semestre, período, año, etc.).
+            Dicho rango de fechas se guardará en .../serviciosTecnicos/configuracion.json
+            Debe guardarse y leerse como JSON.
+            <br>
+            <br>
+            Permita cargar la programación de salas para el rango de fechas dado.
+            <br>
+            <br>
+            Otros aspectos de configuración que sean necesarios...
+            <br>
+            <br>
+            El diseño de este formulario debe ser concertado con el docente.
+            <br>
             <span id="configuracion-tonteria"></span>
 
             <br/>
             <br/>
             <div class="box" id="configuracion-contenedor-plupload">
-                Fecha de inicio de la fase actual: <input type="date" id="configuracion-inicio">&nbsp;&nbsp;
-                Fecha de finalización de la fase actual: <input type="date" id="configuracion-fin">&nbsp;&nbsp;
+                Fecha de inicio de la fase actual: <input type="text" id="configuracion-inicio">&nbsp;&nbsp;
+                Fecha de finalización de la fase actual: <input type="text" id="configuracion-fin">&nbsp;&nbsp;
                 <button id="configuracion-aceptar-rango-fechas">Aceptar</button>
             </div>
             <br/>
