integracion reserva equipos cortes

--- a/sirem02/vista/html/equipos-detalle.html
+++ b/sirem02/vista/html/equipos-detalle.html
@@ -10,17 +10,21 @@
         <script type="text/javascript" src="vista/js/equipos-detalle.js"></script>
     </head>
     <body>
-        <div class="box">
-            Implemente aquí:
-            <br>
-            CRUD de equipos debidamente validado.
-            <br>
-            Tenga en cuenta que un equipo tiene software instalado y tiene unas características de software.
-            <br>
-            Se espera que esta implementación permita tener en la base de datos la información necesaria
-            para obtener inventarios de hardware y software.
-            <br>
-            <span id="equipos-detalle-tonteria"></span>
+        <div id="capaUsuarios" class="box">
+            <div id="divLoc0">
+                <table id="tablaTipoEquipo">
+                    <tr><td id="Equipo">Accediendo a la información...</td></tr>
+                </table>
+                <div id="pTablaTipoEquipo"></div>
+            </div>
+        </div>
+        <div id="capaUsuarios" class="box">
+            <div id="divLoc0">
+                <table id="tablaEquipo">
+                    <tr><td id="Equipo">Accediendo a la información...</td></tr>
+                </table>
+                <div id="pTablaEquipo"></div>
+            </div>
         </div>
     </body>
 </html>
